template/sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security Groups for ECS Services and ALB'

Parameters:
  Environment:
    Type: String
    Description: Environment name
  
  ApplicationName:
    Type: String
    Description: Name of the application
  
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where security groups will be created
  
  AllowedCIDR:
    Type: String
    Description: CIDR block allowed to access ALB
    Default: 0.0.0.0/0

Resources:
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Environment}-${ApplicationName}-alb-sg'
      GroupDescription: !Sub 'Security group for ${ApplicationName} ALB in ${Environment}'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref AllowedCIDR
          Description: Allow HTTP traffic
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref AllowedCIDR
          Description: Allow HTTPS traffic
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${ApplicationName}-alb-sg'
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref ApplicationName
        - Key: ManagedBy
          Value: CloudFormation

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Environment}-${ApplicationName}-ecs-sg'
      GroupDescription: !Sub 'Security group for ${ApplicationName} ECS tasks in ${Environment}'
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
      Tags:
        - Key: Name
          Value: !Sub '${Environment}-${ApplicationName}-ecs-sg'
        - Key: Environment
          Value: !Ref Environment
        - Key: Application
          Value: !Ref ApplicationName
        - Key: ManagedBy
          Value: CloudFormation

  ECSSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ECSSecurityGroup
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !Ref ALBSecurityGroup
      Description: Allow traffic from ALB

Outputs:
  ALBSecurityGroupId:
    Description: Security Group ID for ALB
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-ALBSecurityGroupId'
  
  ECSSecurityGroupId:
    Description: Security Group ID for ECS Tasks
    Value: !Ref ECSSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-ECSSecurityGroupId'
